# extensible-reporting

./: .gitignore  Dockerfile  Dockerfile.debian12  Example-Report.html  README.md  VERSION  ci_bump_version.py  clean.spec  compliance_report.py  container_vulns_report.py  create_lambda.sh  csa_lambda_schema.json  entry_script.sh  events_report.py  generate_cached_data.py  generate_csa_report.py  generate_csa_report.spec  generate_csa_report.spec.old  generate_csa_report_linux.spec  generate_csa_report_mac.spec  generate_csa_report_mac_arm.spec  generate_csa_report_mac_arm_onedir.spec  generate_csa_report_win.spec  generate_dummy_data.py  generate_report.py  host_vulns_report.py  integrations_report.py  lamba_function.py  lambda_function.py  lambda_requirements.txt  lw_report_gen.py  main.py  pyinstaller_runtime_hook.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  ci_bump_version.py  test.yml
assets/: mainwindow.ui
common/: __init__.py
modules/: alerts.py  compliance.py  container_vulnerabilities.py  events.py  gui_main.py  host_vulnerabilities.py  lacework_interface.py  mainwindow.py  pdf_printer.py  process_args.py  reportgen.py  secrets.py  utils.py
modules/reports/: reportgen_csa.py  reportgen_csa_detailed.py
modules/tests/: test_lacework_interface.py
providers/lacework/: __init__.py  alerts.py  azure_subscriptions.py  compliance_reports.py  container_vulns.py  events.py  host_vulns.py  integrations.py  query.py
providers/lacework_cached/: __init__.py  container_vulns.py  host_vulns.py  integrations.py
providers/lacework_dummy/: __init__.py  compliance_reports.py  container_vulns.py  events.py  host_vulns.py
providers/local_asset/: __init__.py  local_file.py
reports/datapane/: compliance_report.py  container_vulns_report.py  events_report.py  host_vulns_report.py  integrations_report.py
reports/jinja2/: csa_report.html  csa_report.py  host_vulns_report.html.j2  host_vulns_report.py
reports/plotly/: bar_chart.py  (+1 more)
sample_reports/: compliance_report.py  csa_report.html  j2_host_vulns_report.html
templates/: csa_detailed_report.jinja2  csa_report.jinja2
tests/: test_lacework_interface.py
wkhtmltopdf-layer/: Dockerfile  create_wkhtmltopdf_layer.sh
(+32 files in other folders)
