[project]
name = "extensible-reporting"
version = "2.0.0"
description = ""
authors = [{name="Tim MacDonald", email="tmacdonald@fortinet.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
# packages = [{include = "extensible_reporting"}]

dependencies = [

"numpy  (<2.0)",
"pandas (>=1.5.0)",
"coloredlogs (>=15.0.1)",
"jinja2 (>=3.1.2)",
"plotly (>=5.10.0)",
"kaleido (>=0.2.1)",
"logzero (>=1.7.0)",
"pytest (>=7.2.1)",
"python-dotenv (>=0.21.1)",
"laceworksdk (>=4.1.0)",
"pyside6 (>=6.9.0)",
"weasyprint (>=62.1)",

    ]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"
boto3 = "^1.26.0"
poethepoet = "^0.24.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.poe.tasks]
clean = "rm -r build/ dist/"